maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:5: error: recursive method keepHandOnRightWall needs result type
	if (estFaceMur) {gauche(); if (estFaceMur()) {keepHandOnRightWall()}} else {avance()}
                                                      ^